--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #296bb3;
+  --ifm-color-primary-dark: #2560a1;
+  --ifm-color-primary-darker: #235b98;
+  --ifm-color-primary-darkest: #1d4b7d;
+  --ifm-color-primary-light: #2d76c5;
+  --ifm-color-primary-lighter: #2f7bce;
+  --ifm-color-primary-lightest: #498cd5;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #94c8ff;
+  --ifm-color-primary-dark: #6cb3ff;
+  --ifm-color-primary-darker: #58a9ff;
+  --ifm-color-primary-darkest: #1b8aff;
+  --ifm-color-primary-light: #bcddff;
+  --ifm-color-primary-lighter: #d0e7ff;
+  --ifm-color-primary-lightest: #ffffff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
