--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -28,3 +28,15 @@
   --ifm-color-primary-lightest: #ffffff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+h1 {
+  font-size: 30px;
+}
+/* 
+h2 {
+  font-size: 22px;
+}
+
+h3 {
+  font-size: 18px;
+} */
