--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -23,9 +23,9 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-h1 {
+/* h1 {
   font-size: 30px;
-}
+} */
 /* 
 h2 {
   font-size: 22px;
