--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -37,17 +37,13 @@ h3 {
 }
 
 h4 {
-  margin: 0 0 5px 0;
+  margin: 10px 0 5px 0;
 }
 
 p {
   margin: 0;
 }
 
-li {
-  margin: 10px 0;
-}
-
-div.language-ts {
+div.language-ts, div.language-tsx {
   margin: 10px 0;
 }
