--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -33,11 +33,11 @@ h2 {
 }
 
 h3 {
-  margin: 17px 0 13px 0;
+  margin-bottom: 13px;
 }
 
 h4 {
-  margin: 10px 0 5px 0;
+  margin-bottom: 13px;
 }
 
 p {
