--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -47,3 +47,10 @@ h4 {
 p {
   margin-bottom: 15px;
 }
+
+.toc-inline ul{
+  padding-bottom: 0;
+}
+.toc-inline li:last-child{
+  margin-bottom: 0;
+}
