--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -4,14 +4,13 @@
 @layer theme, base, components, utilities;
 @import 'tailwindcss/theme.css' layer(theme);
 /* @import 'tailwindcss/preflight.css' layer(base); */
-@import 'tailwindcss/utilities.css' layer(utilities);
-
-/* Because of disabled preflight */
-/* button {
+button {
   all: unset;
   display: inline-flex;
   align-items: center;
-} */
+}
+/* @import 'tailwindcss/utilities.css' layer(utilities); */
+@tailwind utilities;
 
 /* Not needed anymore in Tailwind v4? */
 /* @custom-variant dark (&:is([data-theme="dark"] *)); */
